style.css
/* LARGE DESKTOP */

@media screen and (min-width: 960px) {
    .navbar-brand {
        font-family: 'Mansalva', cursive;
        color: red !important;
        font-size: 55px !important;
    }
    .main {
        width: 100%;
        height: 80%;
    }
}


/* MEDIUM SCREENS (Laptops, iPads, etc...) */

@media screen and (min-width: 800px) and (max-width: 960px) {
    .main {
        width: 100%;
    }
    .navbar-brand {
        font-family: 'Mansalva', cursive;
        color: red !important;
        font-size: 35px !important;
    }
}

* {
    box-sizing: border-box;
    margin: 0;
}

.navbar {
    position: relative;
    background-color: #999999;
    opacity: 0.8;
    padding: 20px;
}

.box {
    position: relative;
    padding: 20px;
    background-color: white;
    opacity: 0.6;
    max-width: 100%;
    max-height: 30%;
    color: black;
    text-align: center;
}

.box-title {
    text-align: center;
    color: black;
}

.navbar-brand {
    font-family: 'Mansalva', cursive;
    color: red !important;
    font-size: 22px ;
} 
.navbar-nav{ 
    /* position: absolute; Navbar Bug */
    padding: 5px;
    right: 0;
}

.nav-link {
    align-items: right;
}

body {
    font-family: "Helvetica Neue", sans-serif;
    background-image: url("skyline.jpg");
    max-width: 100%;
    min-height: 100vh;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.data-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: flex-start;
    align-content: space-evenly;
}

.welcome {
    font-family: "Acme", sans-serif;
    font-size: 30px;
}

.dd {
    font-size: 13px;
}

.schools {
    min-height: 170px;
    color: royalblue;
    background-color: white;
    opacity: 0.8;
    border: 1px solid royalblue;
}

.district {
    font-size: 17px;
    padding: 10px;
    order: 1;
    flex-grow: 2;
    color: black;
}

.district-name {
    font-size: 14px;
    color: royalblue;
}

.district-table {
    align-items: center;
    font-size: 13px;
    color: royalblue;
    justify-content: space-between;
}

.state {
    font-size: 17px;
    padding: 10px;
    order: 2;
    flex-grow: 2;
    color: black;
}

.state-table {
    align-items: center;
    font-size: 13px;
    color: royalblue;
    vertical-align: bottom;
}

.weather {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    min-height: 200px;
    color: royalblue;
    background-color: white;
    opacity: 0.8;
    /*border: 1px solid royalblue;*/
}

#weatherInserted {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    text-align: center;
}

#weatherInserted ul {
    padding: 0;
}

#weatherInserted ul li {
    list-style-type: none;
}

.crime {
    min-height: 170px;
    color: royalblue;
    background-color: white;
    opacity: 0.8;
    border: 1px solid royalblue;
}

.city-name {
    font-size: 14px;
    color: royalblue;
}

.city-table {
    align-items: center;
    font-size: 13px;
    color: royalblue;
}

.data-crime-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: flex-start;
    align-content: space-evenly;
}

.district-area {
    font-size: 17px;
    padding: 10px;
    order: 1;
    flex-grow: 2;
    color: black;
}

.crime-state {
    font-size: 17px;
    padding: 10px;
    order: 2;
    flex-grow: 2;
    color: black;
}

.crime-state-table {
    align-items: center;
    font-size: 13px;
    color: royalblue;
}

.map {
    display: flex;
    flex-direction: columns;
    justify-content: center;
    align-content: center;
    height: 370px;
    color: royalblue;
    background-color: white;
    /* opacity: 0.8; */
    border: 1px solid royalblue;
}

.footer {
    position: fixed !important;
    left: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 5px;
    background-color: white;
    opacity: 0.4;
    padding: 10px;
}

.hidden {
    display: none;
}

table {
    border-collapse: separate;
    border-spacing: 10px;
}


/* table,
th,
td {
    border: 1px solid black;
} */


/* SHARED: MEDIUM AND LARGE SCREENS */

@media screen and (min-width: 800px) {
    .header {
        font-size: 20px;
        padding: 40px;
    }
    .container {
        position: relative;
    }
    .main {
        position: absolute;
    }
    .footer {
        position: absolute;
        bottom: 0;
    }
    #weatherInserted {
        flex-direction: row;
        justify-content: space-around;
        text-align: inherit;
    }
}


/* Mobile (default) */

